# findpython

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  findpython.pyi  pyproject.toml
.github/workflows/: build.yaml  ci.yml  release.yml
python/findpython/: __init__.py  __init__.pyi
src/: cli.rs  finder.rs  helpers.rs  lib.rs  main.rs  python.rs
src/findpython/: __init__.py  __main__.py  finder.py  python.py  utils.py
src/findpython/_vendor/: vendor.txt
src/findpython/_vendor/pep514tools/: __init__.py  environment.py
src/findpython/pep514tools/: __init__.py  _registry.py  environment.py
src/findpython/providers/: __init__.py  asdf.py  base.py  macos.py  path.py  pep514.py  pyenv.py  rye.py  uv.py  winreg.py
src/providers/: asdf.rs  mod.rs  path.rs  pyenv.rs  pyobject.rs  rye.rs  winreg.rs
tests/: conftest.py  test_cli.py  test_finder.py  test_posix.py  test_utils.py
