[package]
name = "findpython"
version = "23.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "findpython"
crate-type = ["cdylib"]

[dependencies]
dirs = "5.0.1"
fancy-regex = "0.11.0"
lazy_static = "1.4.0"
md5 = "0.7.0"
pep440_rs = "0.3.11"
pyo3 = { version = "0.19.0", optional = true }
shellexpand = "3.1.0"
wait-timeout = "0.2.0"
which = "4.4.0"

[features]
pyo3 = ["dep:pyo3", "pep440_rs/pyo3"]
