[lib]
name = "findpython"
crate-type = ["cdylib", "rlib"]

[package]
name = "findpython"
version = "23.7.0"
edition = "2021"
description = "Find python executables on your system"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
dirs = "5.0.1"
faccess = "0.2.4"
fancy-regex = "0.11.0"
lazy_static = "1.4.0"
md5 = "0.7.0"
pep440_rs = "0.3.11"
pyo3 = { version = "0.19.0", optional = true, features = ["abi3-py37", "anyhow"] }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
shellexpand = "3.1.0"
wait-timeout = "0.2.0"
which = "4.4.0"

[features]
pyo3 = ["dep:pyo3", "pep440_rs/pyo3"]
