[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "findpython"
description = "A utility to find python versions on your system"
authors = [
    {name = "Frost Ming", email = "mianghong@gmail.com"},
]
dependencies = []
requires-python = ">=3.7"
license = {text = "MIT"}
readme = "README.md"

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
